--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-			<version>5.1.0</version>
+			<groupId>org.dbpedia.spotlight</groupId>
+			<artifactId>core</artifactId>
+			<version>0.7</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers-common</artifactId>
-			<version>5.1.0</version>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
