Fix for parsing latest wikipedia

--- a/conf/extract_stats.config
+++ b/conf/extract_stats.config
@@ -4,16 +4,16 @@
 # ie, you have to have a look at them 
 
 # abbreviation for the language. used a bit of everywhere
-language=en
+language=pl
 
 # path to the dump file of wikipedia (relative to the execution point)
-dump_file=data/enwiki-extract
+dump_file=.
 
 # path to the file containing the stopwords (relative to the execution point)
-stop_words=data/stopwords.en.list
+stop_words=data/stopwords.pl.list
 
 # the name of the lucene analyzer
-lucene_analyzer=en.EnglishAnalyzer
+lucene_analyzer=pl.PolishAnalyze
 
 # path to tmp folder, to put the tmp files generated during computation
 tmp_folder=data/tmp/
